# Virtual_Camera

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
resources/: duzo_pudelek.txt  kokarda.txt  prostokat.txt  szescian.txt  szescian_4_x_4.txt
settings/: bryly.txt
src/: main.cpp
src/file-reader/: ObjectReader.cpp  ObjectReader.h
src/graphics/: Figure.cpp  Figure.h  Projector.cpp  Projector.h
src/graphics/binaries/: RobotoMonoFont.h
src/graphics/elements/: Camera.cpp  Camera.h  Figure.cpp  Figure.h  Point.h
src/utils/: 3DSpaceUtils.cpp  3DSpaceUtils.h  GeneralUtils.cpp  GeneralUtils.h  MySFMLUtils.cpp  MySFMLUtils.h
src/utils/algorithms/: HiddenSurfaceElimination.cpp  HiddenSurfaceElimination.h
src/utils/algorithms/BSPTree/: BSPTree.cpp  BSPTree.h
